syntax = "proto3";

option go_package = "github.com/atom-apps/dictionary/proto/v1";
package proto.v1;

service DictionaryService {
    rpc GetItems(GetItemsRequest) returns (GetItemsResponse){}
}

message GetItemsRequest {
    string language = 1;
}

message GetItemsResponse {
    repeated Item items = 1;
}

message Item {
    string key = 1;
    string value = 2;
}